# sway_unsplash_wallpaper

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  acceptance-report.md  pyproject.toml  release-report.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml  tests.yml
acceptance_screenshots/: diagnostics.txt  sway_processes.txt
data/: com.unsplash.wallpaper.desktop  com.unsplash.wallpaper.json  com.unsplash.wallpaper.service  com.unsplash.wallpaper.timer  unsplash-wallpaper.spec
scripts/: recovery_test.sh  stress_test.sh  sway_validation.sh  validate_packaging.sh
src/unsplash_wallpaper/: __main__.py  app.py  config.py  constants.py  database.py  entry_point.py
src/unsplash_wallpaper/models/: __init__.py  wallpaper.py
src/unsplash_wallpaper/services/: __init__.py  history_service.py  image_optimizer.py  scheduler_service.py  storage_service.py  unsplash_service.py  wallpaper_service.py
src/unsplash_wallpaper/system/: __init__.py  autostart.py
src/unsplash_wallpaper/tray/: __init__.py  tray_manager.py
src/unsplash_wallpaper/ui/: __init__.py  category_page.py  history_page.py  main_window.py  preferences_window.py
stress_results/: stress_report_20260602_133805.csv
tests/: conftest.py  test_config.py  test_database.py  test_history_service.py  test_integration.py  test_packaging.py  test_quality.py  test_recovery.py  test_scheduler_service.py  test_storage_service.py  test_stress.py  test_sway_validation.py  test_unsplash_service.py  test_wallpaper_service.py
