[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsplash-wallpaper"
version = "1.0.0"
description = "Automatic Unsplash wallpaper changer for Linux desktop"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
keywords = ["wallpaper", "unsplash", "desktop", "sway", "wayland"]
authors = [
    {name = "Unsplash Wallpaper Team"},
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: Wallpapers",
]

dependencies = [
    "requests>=2.31",
    "pygobject>=3.48",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-mock>=3",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
unsplash-wallpaper = "unsplash_wallpaper.entry_point:main"

[project.gui-scripts]
unsplash-wallpaper-gui = "unsplash_wallpaper.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["unsplash_wallpaper*"]

[tool.setuptools.package-data]
unsplash_wallpaper = ["py.typed", "assets/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=unsplash_wallpaper --cov-report=term-missing"

[tool.ruff]
line-length = 79
target-version = "py313"
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
